--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -805,6 +805,25 @@ body {
     }
   }
 
+  &__all {
+    font-size: 25px;
+    letter-spacing: -0.01em;
+    color: #0d0d0d;
+    padding: 12.5px 40px;
+    border: 1px solid #0d0d0d;
+    border-radius: 60px;
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: 0.3s;
+    }
+
+    @media screen and (max-width: 550px) {
+      width: 100%;
+    }
+  }
+
   &__content {
     display: none;
 
@@ -818,16 +837,52 @@ body {
       }
     }
 
-    &:first-child > div:nth-child(1) {
+    &:nth-child(1) > div:nth-child(1) {
       background-image: url("../assets/images/species/petFriendly.jpg");
     }
 
-    &:first-child > div:nth-child(2) {
+    &:nth-child(1) > div:nth-child(2) {
       background-image: url("../assets/gifs/orchid.gif");
     }
 
-    &:first-child > div:nth-child(3) {
+    &:nth-child(1) > div:nth-child(3) {
       background-image: url("../assets/images/species/succulents.jpg");
+    }
+
+    &:nth-child(2) > div:nth-child(1) {
+      background-image: url("../assets/images/species/fruit-bearing.jpg");
+    }
+
+    &:nth-child(2) > div:nth-child(2) {
+      background-image: url("../assets/images/species/foliage.jpg");
+    }
+
+    &:nth-child(2) > div:nth-child(3) {
+      background-image: url("../assets/gifs/ferns.gif");
+    }
+
+    &:nth-child(3) > div:nth-child(1) {
+      background-image: url("../assets/images/species/indoorFlowers.jpg");
+    }
+
+    &:nth-child(3) > div:nth-child(2) {
+      background-image: url("../assets/gifs/seasonal.gif");
+    }
+
+    &:nth-child(3) > div:nth-child(3) {
+      background-image: url("../assets/images/species/tropical.jpg");
+    }
+
+    &:nth-child(4) > div:nth-child(1) {
+      background-image: url("../assets/gifs/herbs.gif");
+    }
+
+    &:nth-child(4) > div:nth-child(2) {
+      background-image: url("../assets/images/species/perennials.jpg");
+    }
+
+    &:nth-child(4) > div:nth-child(3) {
+      background-image: url("../assets/images/species/airPurifying.jpeg");
     }
   }
 
