update performance and accessibility by lighthouse

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -234,7 +234,7 @@ body {
 }
 
 .intro {
-  background-image: url("../assets/images/intro/back.jpg");
+  background-image: url("../assets/images/intro/back.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
